add javascript for form updates

--- a/index.html
+++ b/index.html
@@ -37,18 +37,20 @@
             <input id="trap" class="form-control" type="text">
           </div>
           <div class="form-group"> <!--This is the villain-->
-            <label for="villain">What you say when you find out something shocking</label>
+            <label for="villain">A name</label>
             <input id="villain" class="form-control" type="text">
           </div>
+          <button type="submit" class="button">REVEAL THE TALE</button>
         </form>
       </div>
+
       <div id="story">
         <h1>A Scooby-Doo Mystery Adventure!</h1>
         <p>
           One day the gang was busy helping <span class="person1"></span> with a spooky mystery!
           It seemed <span class="person1"></span> was dealing with a <span class="monster"></span>. 
           Zoinks! What a problem! But Shaggy, Scooby, Velma, Daphne, and Fred are on the case!
-          They were investigating the <span class="place1"></span> when suddenly there was a lound 
+          They were investigating the <span class="place1"></span> when suddenly there was a loud 
           <span class="scary-noise"></span>. "<span class="exclamation"></span>" said Shaggy!
           "We gotta get out of here!"
           <br>
